backend/broPayCRM/force-app/main/default/objects/Chat_Message__c/fields/Expense_Split__c.field-meta.xml
<CustomField>
    <fullName>Expense_Split__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related to which negotiation</description>
    <label>Expense Split</label>
    <referenceTo>Expense_Split__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Messages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>