backend/broPayCRM/force-app/main/default/objects/Chat_Message__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <description>The actual message</description>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>