backend/broPayCRM/force-app/main/default/objects/Chat_Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who sent the message</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>