backend/broPayCRM/force-app/main/default/objects/Chat_Message__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>When it was sent</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>